--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,28 @@ body {
     background-image: url(img/ocean.jpg);
   }
 
+/* .tittle-h1{
+    min-height: 100vh;
+    display: flex;
+    align-items: center; 
+}
+
+  .h1{
+    width: 100%;
+    margin-bottom: 800px;
+    color: rgba(0, 0, 0, 0.5);
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 100px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    background-image: url(img/ocean-fish.jpg);
+    background-size: cover;
+    background-position-y: bottom;
+
+    background-clip: text;
+  } */
+
   #slider {
     background-image: url(img/ocean.jpg);
     background-repeat: no-repeat;
@@ -276,3 +298,103 @@ body {
         opacity: 0;
     }
 }
+
+
+
+/* NEWS */
+#content{
+    width: 100%;
+    height: 800px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.container {
+    width: 100%;
+    display: flex;
+}
+
+.card {
+    width: 100%;
+    margin: 20px;
+    border-radius: 6px;
+    overflow: hidden;
+    background: #fff;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+    cursor: default;
+    transition: all 400ms ease;
+}
+
+.card:hover {
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+    transform: translateY(-3%);
+}
+
+.card img {
+    width: 100%;
+    height: 210px;
+}
+
+.card .content {
+    padding: 15px;
+    text-align: center;
+}
+
+.card .content p {
+    line-height: 1.5;
+    color: #6a6a6a;
+}
+
+.card .content h3 {
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+
+.card .content a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px;
+    margin-top: 10px;
+    color: #2fb4cc;
+    border: 1px solid #2fb4cc;
+    border-radius: 4px;
+    transition: all 400ms ease;
+}
+
+.card .content a:hover {
+    background: #2fb4cc;
+    color: #fff;
+}
+
+
+
+
+/* Admin */
+h1 {
+    margin-top: 0;
+    text-align: center;
+    padding: 0;
+}
+
+form {
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+label, input, button {
+    display: block;
+    margin-bottom: 10px;
+}
+
+button {
+    padding: 5px 10px;
+}
+
+.image-item {
+    display: inline-block;
+    margin-right: 10px;
+  }
+  
+  .image-item img {
+    width: 200px; /* El tamaño deseado para las imágenes */
+    height: auto; /* Para mantener la proporción de aspecto */
+  }
