--- a/styles.css
+++ b/styles.css
@@ -234,6 +234,7 @@ li a:hover {
     color: gold;
     background: linear-gradient(to right, #ffd700, #80701c, #ffce00, #ae9941, #ffc600);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 36px;
     font-weight: bold;
